--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         <li class="nav__item"><a href="#industries" class="nav__link">Industries</a></li>
                         <li class="nav__item"><a href="#process" class="nav__link">Process</a></li>
                         <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
+                        <li class="nav__item"><a href="#why-choose" class="nav__link">Why Choose Us</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#blog" class="nav__link">Insights</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
                 </nav>
@@ -485,6 +485,73 @@
             </div>
         </section>
 
+        <section class="why-choose" id="why-choose">
+            <div class="container">
+                <div class="section__header">
+                    <h2 class="section__title">Affordable & Easy Solutions</h2>
+                    <p class="section__subtitle">Quality IT services that fit your budget and simplify your business</p>
+                </div>
+                <div class="affordability__grid">
+                    <div class="affordability-card">
+                        <div class="affordability-card__icon">
+                            <div class="icon icon--budget"></div>
+                        </div>
+                        <h3 class="affordability-card__title">Budget-Friendly Pricing</h3>
+                        <p class="affordability-card__description">Competitive rates without compromising on quality. We offer flexible pricing models to fit any budget.</p>
+                    </div>
+                    <div class="affordability-card">
+                        <div class="affordability-card__icon">
+                            <div class="icon icon--transparent"></div>
+                        </div>
+                        <h3 class="affordability-card__title">No Hidden Costs</h3>
+                        <p class="affordability-card__description">Transparent pricing with clear project estimates. What we quote is what you pay - no surprises.</p>
+                    </div>
+                    <div class="affordability-card">
+                        <div class="affordability-card__icon">
+                            <div class="icon icon--flexible"></div>
+                        </div>
+                        <h3 class="affordability-card__title">Flexible Payment Options</h3>
+                        <p class="affordability-card__description">Choose from various payment plans including milestones, monthly retainers, or project-based pricing.</p>
+                    </div>
+                    <div class="affordability-card">
+                        <div class="affordability-card__icon">
+                            <div class="icon icon--quick"></div>
+                        </div>
+                        <h3 class="affordability-card__title">Quick Turnaround</h3>
+                        <p class="affordability-card__description">Efficient processes mean faster delivery, reducing your time-to-market and overall project costs.</p>
+                    </div>
+                    <div class="affordability-card">
+                        <div class="affordability-card__icon">
+                            <div class="icon icon--communication"></div>
+                        </div>
+                        <h3 class="affordability-card__title">Easy Communication</h3>
+                        <p class="affordability-card__description">Simple, clear communication throughout the project. No technical jargon - we speak your language.</p>
+                    </div>
+                    <div class="affordability-card">
+                        <div class="affordability-card__icon">
+                            <div class="icon icon--hassle-free"></div>
+                        </div>
+                        <h3 class="affordability-card__title">Hassle-Free Process</h3>
+                        <p class="affordability-card__description">We handle all the technical complexities while you focus on your business. Smooth, stress-free experience.</p>
+                    </div>
+                    <div class="affordability-card">
+                        <div class="affordability-card__icon">
+                            <div class="icon icon--all-in-one"></div>
+                        </div>
+                        <h3 class="affordability-card__title">All-in-One Solution</h3>
+                        <p class="affordability-card__description">One partner for all your IT needs means better coordination, fewer vendors, and reduced costs.</p>
+                    </div>
+                    <div class="affordability-card">
+                        <div class="affordability-card__icon">
+                            <div class="icon icon--scalable"></div>
+                        </div>
+                        <h3 class="affordability-card__title">Scalable Solutions</h3>
+                        <p class="affordability-card__description">Start small and scale up as needed. Our solutions grow with your business without major overhauls.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="about" id="about">
             <div class="container">
                 <div class="section__header">
@@ -516,114 +583,6 @@
                         <h3 class="benefit-card__title">Quality & Best Practices</h3>
                         <p class="benefit-card__description">Commitment to excellence in every aspect of delivery</p>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="faq" id="faq">
-            <div class="container">
-                <div class="section__header">
-                    <h2 class="section__title">Frequently Asked Questions</h2>
-                    <p class="section__subtitle">Common questions about our IT services</p>
-                </div>
-                <div class="faq__list">
-                    <div class="faq-item" data-faq>
-                        <button class="faq-item__question" type="button">
-                            <span>What types of IT services do you offer?</span>
-                            <span class="faq-item__icon">+</span>
-                        </button>
-                        <div class="faq-item__answer">
-                            <p>We provide comprehensive IT services including web development, mobile apps, AI solutions, cloud computing, cybersecurity, database management, IT consulting, DevOps, quality assurance, and digital marketing.</p>
-                        </div>
-                    </div>
-                    <div class="faq-item" data-faq>
-                        <button class="faq-item__question" type="button">
-                            <span>Do you work with small businesses or just enterprises?</span>
-                            <span class="faq-item__icon">+</span>
-                        </button>
-                        <div class="faq-item__answer">
-                            <p>We work with businesses of all sizes, from startups to large enterprises. Our solutions are scalable and tailored to each client's specific needs and budget.</p>
-                        </div>
-                    </div>
-                    <div class="faq-item" data-faq>
-                        <button class="faq-item__question" type="button">
-                            <span>How do you ensure project quality?</span>
-                            <span class="faq-item__icon">+</span>
-                        </button>
-                        <div class="faq-item__answer">
-                            <p>We follow industry best practices, implement rigorous testing procedures, conduct code reviews, and maintain continuous communication throughout the development process.</p>
-                        </div>
-                    </div>
-                    <div class="faq-item" data-faq>
-                        <button class="faq-item__question" type="button">
-                            <span>What is your typical project timeline?</span>
-                            <span class="faq-item__icon">+</span>
-                        </button>
-                        <div class="faq-item__answer">
-                            <p>Project timelines vary based on complexity and scope. Simple projects may take 2-4 weeks, while complex enterprise solutions can take 3-6 months. We provide detailed timelines during the planning phase.</p>
-                        </div>
-                    </div>
-                    <div class="faq-item" data-faq>
-                        <button class="faq-item__question" type="button">
-                            <span>Do you provide ongoing support after project completion?</span>
-                            <span class="faq-item__icon">+</span>
-                        </button>
-                        <div class="faq-item__answer">
-                            <p>Yes, we offer comprehensive maintenance and support services to ensure your systems continue to perform optimally after launch.</p>
-                        </div>
-                    </div>
-                    <div class="faq-item" data-faq>
-                        <button class="faq-item__question" type="button">
-                            <span>Can you help with digital transformation initiatives?</span>
-                            <span class="faq-item__icon">+</span>
-                        </button>
-                        <div class="faq-item__answer">
-                            <p>Absolutely. We specialize in helping organizations modernize their technology infrastructure, processes, and capabilities to stay competitive in the digital age.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="blog" id="blog">
-            <div class="container">
-                <div class="section__header">
-                    <h2 class="section__title">Latest Insights</h2>
-                    <p class="section__subtitle">Stay updated with technology trends and best practices</p>
-                </div>
-                <div class="blog__grid">
-                    <article class="blog-card">
-                        <div class="blog-card__category">AI & Technology</div>
-                        <h3 class="blog-card__title">The Future of AI in Business Operations</h3>
-                        <p class="blog-card__excerpt">Exploring how artificial intelligence is transforming business processes and creating new opportunities for growth.</p>
-                        <div class="blog-card__meta">
-                            <span class="blog-card__date">August 1, 2025</span>
-                        </div>
-                    </article>
-                    <article class="blog-card">
-                        <div class="blog-card__category">Cloud Computing</div>
-                        <h3 class="blog-card__title">Cloud Migration Best Practices</h3>
-                        <p class="blog-card__excerpt">Essential strategies for successful cloud migration projects and avoiding common pitfalls.</p>
-                        <div class="blog-card__meta">
-                            <span class="blog-card__date">July 28, 2025</span>
-                        </div>
-                    </article>
-                    <article class="blog-card">
-                        <div class="blog-card__category">Cybersecurity</div>
-                        <h3 class="blog-card__title">Cybersecurity in the Modern Workplace</h3>
-                        <p class="blog-card__excerpt">Key security considerations for remote and hybrid work environments.</p>
-                        <div class="blog-card__meta">
-                            <span class="blog-card__date">July 25, 2025</span>
-                        </div>
-                    </article>
-                    <article class="blog-card">
-                        <div class="blog-card__category">Mobile Development</div>
-                        <h3 class="blog-card__title">Mobile App Development Trends 2025</h3>
-                        <p class="blog-card__excerpt">Latest trends and technologies shaping mobile application development.</p>
-                        <div class="blog-card__meta">
-                            <span class="blog-card__date">July 22, 2025</span>
-                        </div>
-                    </article>
                 </div>
             </div>
         </section>
@@ -739,43 +698,52 @@
                 </div>
                 <div class="footer__links">
                     <div class="footer__section">
-                        <h4 class="footer__title">Core Services</h4>
+                        <h4 class="footer__title">Web & Mobile</h4>
                         <ul class="footer__list">
                             <li><a href="#services">Web Development</a></li>
-                            <li><a href="#services">Mobile Apps</a></li>
-                            <li><a href="#services">AI Solutions</a></li>
-                            <li><a href="#services">Cloud Computing</a></li>
-                            <li><a href="#services">Cybersecurity</a></li>
-                            <li><a href="#services">Database Management</a></li>
+                            <li><a href="#services">Mobile App Development</a></li>
+                            <li><a href="#services">E-commerce Platforms</a></li>
+                            <li><a href="#services">Progressive Web Apps</a></li>
+                            <li><a href="#services">Responsive Design</a></li>
                         </ul>
                     </div>
                     <div class="footer__section">
-                        <h4 class="footer__title">Consulting Services</h4>
+                        <h4 class="footer__title">AI & Cloud</h4>
+                        <ul class="footer__list">
+                            <li><a href="#services">AI Solutions</a></li>
+                            <li><a href="#services">Machine Learning</a></li>
+                            <li><a href="#services">Cloud Computing</a></li>
+                            <li><a href="#services">Cloud Migration</a></li>
+                            <li><a href="#services">Serverless Computing</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__section">
+                        <h4 class="footer__title">Security & Data</h4>
+                        <ul class="footer__list">
+                            <li><a href="#services">Cybersecurity</a></li>
+                            <li><a href="#services">Database Management</a></li>
+                            <li><a href="#services">Data Analytics</a></li>
+                            <li><a href="#services">Business Intelligence</a></li>
+                            <li><a href="#services">Compliance Management</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__section">
+                        <h4 class="footer__title">Consulting & Support</h4>
                         <ul class="footer__list">
                             <li><a href="#services">IT Strategy</a></li>
                             <li><a href="#services">DevOps & Automation</a></li>
                             <li><a href="#services">Quality Assurance</a></li>
                             <li><a href="#services">Digital Marketing</a></li>
-                            <li><a href="#industries">Industry Solutions</a></li>
-                            <li><a href="#process">Our Process</a></li>
+                            <li><a href="#contact">24/7 Support</a></li>
                         </ul>
                     </div>
                     <div class="footer__section">
-                        <h4 class="footer__title">Resources</h4>
+                        <h4 class="footer__title">Company</h4>
                         <ul class="footer__list">
                             <li><a href="#portfolio">Case Studies</a></li>
-                            <li><a href="#blog">Tech Insights</a></li>
-                            <li><a href="#faq">FAQ</a></li>
+                            <li><a href="#why-choose">Why Choose Us</a></li>
+                            <li><a href="#industries">Industries</a></li>
                             <li><a href="#contact">Free Consultation</a></li>
-                            <li><a href="#about">Why Choose Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer__section">
-                        <h4 class="footer__title">Contact</h4>
-                        <ul class="footer__list">
-                            <li>hello@haloit.services</li>
-                            <li>+1 (555) 123-HALO</li>
-                            <li>24-hour response time</li>
                             <li><a href="#contact">Get Started</a></li>
                         </ul>
                     </div>
