--- a/index.html
+++ b/index.html
@@ -598,10 +598,10 @@
                         </p>
                         <div class="contact__details">
                             <div class="contact__detail">
-                                <strong>Email:</strong> hello@haloit.services
+                                <strong>Email:</strong> junaidabdulaimwork@gmail.com
                             </div>
                             <div class="contact__detail">
-                                <strong>Phone:</strong> +1 (555) 123-HALO
+                                <strong>Phone:</strong> +919345912928
                             </div>
                             <div class="contact__detail">
                                 <strong>Response Time:</strong> Within 24 hours
@@ -614,8 +614,6 @@
                             <h4>Follow Our Updates</h4>
                             <div class="social-links">
                                 <a href="#" class="social-link" target="_blank">LinkedIn</a>
-                                <a href="#" class="social-link" target="_blank">Twitter</a>
-                                <a href="#" class="social-link" target="_blank">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -652,24 +650,10 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="budget" class="form-label">Project Budget Range</label>
-                                <select id="budget" name="budget" class="form-control">
-                                    <option value="">Select budget range</option>
-                                    <option value="under-10k">Under $10,000</option>
-                                    <option value="10k-25k">$10,000 - $25,000</option>
-                                    <option value="25k-50k">$25,000 - $50,000</option>
-                                    <option value="50k-100k">$50,000 - $100,000</option>
-                                    <option value="over-100k">Over $100,000</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
                                 <label for="timeline" class="form-label">Desired Timeline</label>
                                 <select id="timeline" name="timeline" class="form-control">
                                     <option value="">Select timeline</option>
                                     <option value="urgent">ASAP (Rush project)</option>
-                                    <option value="1-2months">1-2 months</option>
-                                    <option value="3-6months">3-6 months</option>
-                                    <option value="6months+">6+ months</option>
                                     <option value="flexible">Flexible</option>
                                 </select>
                             </div>
