--- a/index.html
+++ b/index.html
@@ -618,47 +618,21 @@
                         </div>
                     </div>
                     <div class="contact__form">
-                        <form class="form" id="contactForm">
-                            <div class="form-group">
-                                <label for="name" class="form-label">Name *</label>
-                                <input type="text" id="name" name="name" class="form-control" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email" class="form-label">Email *</label>
-                                <input type="email" id="email" name="email" class="form-control" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="service" class="form-label">Primary Service Interest *</label>
-                                <select id="service" name="service" class="form-control" required>
-                                    <option value="">Select a service</option>
-                                    <option value="web-development">Web Development</option>
-                                    <option value="mobile-apps">Mobile App Development</option>
-                                    <option value="ai-solutions">AI & Machine Learning</option>
-                                    <option value="cloud-services">Cloud Computing</option>
-                                    <option value="cybersecurity">Cybersecurity</option>
-                                    <option value="database">Database Management</option>
-                                    <option value="consulting">IT Consulting</option>
-                                    <option value="devops">DevOps & Automation</option>
-                                    <option value="qa">Quality Assurance</option>
-                                    <option value="digital-marketing">Digital Marketing</option>
-                                    <option value="multiple">Multiple Services</option>
-                                    <option value="consultation">General Consultation</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="timeline" class="form-label">Desired Timeline</label>
-                                <select id="timeline" name="timeline" class="form-control">
-                                    <option value="">Select timeline</option>
-                                    <option value="urgent">ASAP (Rush project)</option>
-                                    <option value="flexible">Flexible</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="message" class="form-label">Project Details *</label>
-                                <textarea id="message" name="message" rows="4" class="form-control" placeholder="Tell us about your project requirements, business goals, and any specific challenges you're facing..." required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn--primary btn--full-width">Send Message & Get Free Consultation</button>
-                        </form>
+                        <form id="contactForm">
+    <div class="form-group">
+        <label class="form-label">Name</label>
+        <input type="text" name="from_name" class="form-control" required>
+    </div>
+    <div class="form-group">
+        <label class="form-label">Email</label>
+        <input type="email" name="reply_to" class="form-control" required>
+    </div>
+    <div class="form-group">
+        <label class="form-label">Message</label>
+        <textarea name="message" class="form-control" rows="5" required></textarea>
+    </div>
+    <button type="submit" class="btn btn--primary">Send Message</button>
+</form>
                     </div>
                 </div>
             </div>
